tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/emptyDeclaration.csl
/*
	Invalid Interface declaration
 */
interface emptyDeclaration
{

};


